fix: wrap and space current refinements (#43)

--- a/src/reset.scss
+++ b/src/reset.scss
@@ -19,7 +19,6 @@
   p,
   ul,
   ol,
-  li,
   figure,
   figcaption,
   blockquote,
